fix(web): ensure landing intro texture does not overlap text

--- a/web/src/styles/_global.scss
+++ b/web/src/styles/_global.scss
@@ -9,7 +9,7 @@
 html {
   font-size: 10px;
 
-  @media (query('xxl')) {
+  @media (query('l')) {
     font-size: 10 / 1440 * 100vw;
   }
 }
